src/App.css
:root {
  --main-color:steelblue;
  --sub-color: skyblue;
  --paper-color: beige;
}

.tilt-in-fwd-br {
	-webkit-animation: tilt-in-fwd-br 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: tilt-in-fwd-br 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

h2 {
  position: sticky;
  bottom: 8vh;
  z-index: 9;
  padding: 1vh;
}

.App {
    background-image: url('https://cdn.pixabay.com/photo/2012/12/24/08/39/backdrop-72250__480.jpg');
    text-align: center;
    height: 100vh;
    max-width: 1024px;
    min-height: fit-content;
    margin: 0 auto;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
}

.App-h1 {
  height: 10vh;
  margin: 0;
  font-size: calc(10px + 4vmin);
}

.App-link {
  color: #61dafb;
}

.App-header {
  position: sticky;
  top: -10vh;
  z-index: 10;
  background-image: url('https://cdn.pixabay.com/photo/2014/05/03/00/35/wood-336589__480.jpg');
  min-height: 20vh;
  padding: 1vh 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
}

.note-form {
  width: 80vw;
  min-width: 280px;
  max-width: 1000px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

::placeholder {
  color:var(--sub-color);
}

.note-form__item {
  border: 0;
  margin: 0;
  font-size: calc(10px + 1vmin);
}

.note-form__item--title {
  border-radius: 5px 5px 0 0;
  background-color: var(--main-color);
  color: white;
  font-weight: bold;
}

.note-form__item--text {
  height: fit-content;
  border-radius: 0 0 5px 5px;
  background-color: var(--paper-color);
}

.note-form__item--reminder {
  padding: 0;
  margin:0;
}

.input-reminder::-webkit-calendar-picker-indicator {
  color: transparent;
  background: none;
  z-index: 1;
}

.input-reminder:before {
  position: absolute;
  color: transparent;
  background: none;
  font-family: 'Font Awesome 5 Free';
  font-weight: 900;
  content: '\f0f3';
  top: 1px;
  left: 15px;
  color:var(--main-color);
}

.input-title, .input-text, .input-reminder {
  border: 0;
  background-color: transparent;
  width: 98%;
  line-height: 30px;
  white-space: pre-wrap;
  overflow-x: hidden;
  resize: none;
  font-size: calc(10px + 1vmin);
}

.input-title {
  color: white;
  font-weight: bold;
}

.input-text {
  padding-top: 8px;
  background-color: var(--paper-color);
  background-image: linear-gradient(var(--sub-color) 1px, transparent 1px);
  background-size: 100% 30px;
  background-repeat: repeat-y;
  background-attachment: local;
  font-size: calc(12px + 1vmin);
}

.input-reminder {
  position: absolute;
  font-size: calc(6px + 1vmin);
  color: var(--main-color);
  bottom: -5px;
  left: -5px;
}

input, textarea {
  outline-width: 0;
  padding: 0;
  padding-left: 1%;
}

fieldset {
  position: relative;
  padding: 0;
  width: 80vw;
  min-width: 280px;
  max-width: 1000px;
}

.label-reminder {
    position: absolute;
    top: -15px;
    left: 25px;
    font-size: calc(2px + 1vmin);
    font-weight: bold;
    color:var(--sub-color);
}

legend {
  position: absolute;
  top: 6px;
  right: 6px;
  font-size: calc(5px + 1vmin);
  font-weight: bold;
  color: var(--sub-color);
  display: none;
}

.note-form__item--submit {
  padding: 1vh;
  margin: 10px;
  border-radius: 5px;
  color: white;
  background-color: var(--sub-color);
  font-weight: bold;
  font-size: calc(15px + 1vmin);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
  cursor: pointer;
}

.note-form__item--submit:hover {
  background-color: darkblue;
}

.note-form__item--submit:active {
  background-color: var(--main-color);
}

.App-main {
  position: relative;
  background-image: url('https://cdn.pixabay.com/photo/2012/12/24/08/39/backdrop-72250__480.jpg');
  padding: 4.8vh 0;
}

.notes {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.text-bg {
  background-color: var(--paper-color);
}

.ReactModal__Overlay {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  z-index: 100;
}

.note, .ReactModal__Content {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  margin: 1vh 2vh;
  height: 250px;
  width: 190px;
}

.ReactModal__Content {
  width: 80vw;
  min-width: 280px;
  max-width: 1000px;
  height: 200px;
  display: unset;
}

.note__item {
  width: 100%;
  padding: 0 5px;
  margin: 0;
  border: 0;
  font-size: calc(10px + 1vmin);
}

.note__item--close, .note__item--reminder, .modal__item--close {
  position: absolute;
  padding: 0;
  top: 2px;
  right: 4px;
  width: fit-content;
  text-align: right;
  cursor: pointer;
  color: var(--sub-color);
  z-index: 1;
}

.note__item--close {
  color: lightcoral;
}

.note__item--reminder {
  top:unset;
  right: unset;
  bottom: 2px;
  left: 4px;
  color: var(--main-color);
  z-index: 1;
  cursor: unset;
}

.note__item--top {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--main-color);
  border-radius: 5px 5px 0 0;
}

.note__item--archived {
  background-color: gray;
  color: lightgreen;
}

.note__item--title {
  padding: 0 10px 5px 0;
  color: white;
  font-weight: bold;
}

.note__item--date {
  padding-bottom: 5px;
  font-size: calc(5px + 1vmin);
  color: lightgrey;
}

.note__item--text {
  padding-top: 8px;
  border-radius: 0 0 5px 5px;
  background-color: var(--paper-color);
  background-image: linear-gradient(var(--sub-color) 1px, transparent 1px);
  background-size: 100% 30px;
  background-repeat: repeat-y;
  background-attachment: local;
  font-size: calc(12px + 1vmin);
  height: 100%;
  overflow-x: hidden;
  line-height: 30px;
  white-space: pre-wrap;
}

.note::before,
.note::after {
  content: '';
  position: absolute;
  bottom: 10px;
  width: 40%;
  height: 10px;
  box-shadow: 0 5px 14px rgba(0, 0, 0, 0.9);
  z-index: -1;
  transition: all .3s ease-in-out;
}

.note::before {
  left: 15px;
  transform: skew(-5deg) rotate(-5deg);
}

.note::after {
  right: 15px;
  transform: skew(5deg) rotate(5deg);
}

.note:hover::before,
.note:hover::after {
  box-shadow: 0 2px 14px rgba(0,0,0,.7);
}

.note:hover::before {
  left: 5px;
}

.note:hover::after {
  right: 5px;
}

.App-footer {
  position: fixed;
  background-color: white;
  width: 100%;
  height: 8vh;
  bottom: 0;
  left: 0;
  font-size: calc(10px + 1vmin);
  z-index: 20;
}

@-webkit-keyframes tilt-in-fwd-br {
  0% {
    -webkit-transform: rotateY(20deg) rotateX(-35deg) translate(300px, 300px) skew(35deg, -10deg);
            transform: rotateY(20deg) rotateX(-35deg) translate(300px, 300px) skew(35deg, -10deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
            transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
    opacity: 1;
  }
}
@keyframes tilt-in-fwd-br {
  0% {
    -webkit-transform: rotateY(20deg) rotateX(-35deg) translate(300px, 300px) skew(35deg, -10deg);
            transform: rotateY(20deg) rotateX(-35deg) translate(300px, 300px) skew(35deg, -10deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
            transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
    opacity: 1;
  }
}

